[tool.black]
line-length = 79
target-version = ["py38"]
exclude = """
(
  /(
      /.git
    | /.github
    | /.pytest_cache
    | /.run
    | /.venv
    | /htmlcov
  )/
)
"""


[tool.isort]
case_sensitive = false
force_single_line = true
line_length = 79
multi_line_output = 3
order_by_type =  false
profile = "black"


[tool.pytest.ini_options]
console_output_style = "count"
filterwarnings = [
    "ignore::DeprecationWarning",
]
testpaths = [
    "tests",
]
addopts = "--cov --no-cov-on-fail --cov-fail-under=0"


[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
files = ["consigliere", "tests",]
no_implicit_optional = true
pretty = true
python_version = "3.9"
show_error_context = true
sqlite_cache = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
